# cleanup-toolkit

./: .conda-env  .coveragerc  .envrc  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  install.sh  pyproject.toml  pytest.ini  requirements-test.txt  run_tests.py
.claude/commands/: README.md  cleanup.md
.github/workflows/: test.yml
claude-code/: README.md  agentic-prompts.md
cleanup_toolkit/: __init__.py  analyzers.py  commands.py  core.py
docs/: claude-code-updates.md  codex-integration.md  configuration.md  cursor-integration.md  quick-start.md  roo-code-integration.md
examples/: README.md
examples/codex-config/: config.yml  prompts.md  sample-cleanup.py
examples/codex-config/scripts/: codex-cleanup.py  interactive-cleanup.py
examples/config-templates/: advanced-config.yml  basic-config.yml
examples/cursor-config/: .cursor-settings  cleanup-prompts.md  sample-cleanup.py
examples/javascript-project/: app.js
examples/python-project/: main.py
examples/roo-config/: roo-prompts.md  sample-cleanup.js
examples/roo-config/.roo/: cleanup-config.json  languages.json
examples/roo-config/.roo/workflows/: systematic-cleanup.yml
examples/team-setup/: team-config.yml
hooks/: pre-commit
scripts/: code_cleanup_gist.sh  enforce-cleanup.sh  quick-cleanup.sh
tests/: README.md  conftest.py
tests/e2e/: test_complete_workflows.py
tests/integration/: test_git_workflows.py
tests/performance/: __init__.py  test_performance.py
tests/security/: __init__.py  test_security.py
tests/unit/: test_basic_functionality.py  test_claude_cleanup_command.py  test_cleanup_script.py.disabled  test_cleanup_toolkit.py  test_pre_commit_hook.py
tests/utils/: test_helpers.py
warp-terminal/: README.md  agentic-workflows.md
